force-app/main/default/objects/Individual_Program_Enrollment__c/Individual_Program_Enrollment__c.object-meta.xml
<CustomObject>
    <description>The study program and study plan enrollment for an individual.</description>
    <label>Individual Program Enrollment</label>
    <nameField>
        <displayFormat>IPE-{00000}</displayFormat>
        <label>Individual Program Enrollment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Program Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>