force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Additional_Credits_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Credits_Required__c</fullName>
    <label>Additional Credits Required</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>