force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Auto_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Auto_Enrollment__c</fullName>
    <description>For audit purposes, this field will be updated either manually by the user or automatically by a trigger when &apos;Eligible Enroll&apos; is updated.</description>
    <label>Auto Enrollment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Skipped</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>