force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Class_Standing__c.field-meta.xml
<CustomField>
    <fullName>Class_Standing__c</fullName>
    <label>Class Standing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Class_Standing</valueSetName>
    </valueSet>
</CustomField>