force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Class_Year__c.field-meta.xml
<CustomField>
    <fullName>Class_Year__c</fullName>
    <inlineHelpText>The year the student is expected to graduate from this Program.</inlineHelpText>
    <label>Class Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>