force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Cohort_ID__c.field-meta.xml
<CustomField>
    <fullName>Cohort_ID__c</fullName>
    <description>Cohort group ID for the students.</description>
    <label>Cohort ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>