force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Individual Program Enrollments</relationshipLabel>
    <relationshipName>Individual_Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>