force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Contact full name for individual academic profile generation.</description>
    <formula>IF(ISBLANK(Contact__r.FirstName),  Contact__r.LastName, Contact__r.FirstName + &apos; &apos; + Contact__r.LastName )</formula>
    <inlineHelpText>Contact full name for individual academic profile generation.</inlineHelpText>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>