force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>Credits_Earned__c</fullName>
    <description>The number of credits the student has successfully completed to date.</description>
    <label>Credits Earned</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>