force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Credits_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Credits_Enrolled__c</fullName>
    <label>Credits Enrolled</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>