force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Credits_Required__c.field-meta.xml
<CustomField>
    <fullName>Credits_Required__c</fullName>
    <formula>Study_Plan__r.Total_Required_Credits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credits Required</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>