force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The date the student is scheduled to complete the Program.</description>
    <inlineHelpText>The date the student is scheduled to complete the Program.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>