force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Eligible_To_Enroll__c.field-meta.xml
<CustomField>
    <fullName>Eligible_To_Enroll__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, indicates the student has met program requirements and is eligible to enroll.</description>
    <label>Eligible To Enroll</label>
    <type>Checkbox</type>
</CustomField>