force-app/main/default/objects/Individual_Program_Enrollment__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The date the student completed the Program.</description>
    <inlineHelpText>The date the student completed the Program.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>