force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Fee_Method__c.field-meta.xml
<CustomField>
    <fullName>Fee_Method__c</fullName>
    <label>(Obsolete) Fee Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fee_Method</valueSetName>
    </valueSet>
</CustomField>