force-app/main/default/objects/Individual_Program_Enrollment__c/fields/GPA__c.field-meta.xml
<CustomField>
    <fullName>GPA__c</fullName>
    <description>The student&apos;s current grade point average.</description>
    <label>(Reserved) GPA</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>