force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Individual_Academic_Profile__c.field-meta.xml
<CustomField>
    <fullName>Individual_Academic_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Academic Profile</label>
    <referenceTo>Individual_Academic_Profile__c</referenceTo>
    <relationshipLabel>Individual Program Enrollments</relationshipLabel>
    <relationshipName>Individual_Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>