force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Individual_Program_Application__c.field-meta.xml
<CustomField>
    <fullName>Individual_Program_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The originating Individual Program Application for the Individual Program Enrollment.</description>
    <inlineHelpText>The originating Individual Program Application for the Individual Program Enrollment.</inlineHelpText>
    <label>Individual Program Application</label>
    <referenceTo>Individual_Program_Application__c</referenceTo>
    <relationshipLabel>Individual Program Enrollments</relationshipLabel>
    <relationshipName>Individual_Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>