force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <label>(Obsolete) Last Payment Date</label>
    <type>Date</type>
</CustomField>