force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Master_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Master_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Enrollment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Contact__c</field>
            <operation>equals</operation>
            <valueField>Individual_Program_Enrollment__c.Contact__c</valueField>
        </filterItems>
        <infoMessage>Please select a master enrollment for the student.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Individual_Program_Enrollment__c</referenceTo>
    <relationshipLabel>Child Individual Program Enrollments</relationshipLabel>
    <relationshipName>Child_Individual_Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>