force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Parchment_No__c.field-meta.xml
<CustomField>
    <fullName>Parchment_No__c</fullName>
    <label>Parchment No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>