force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Pay_Upfront__c.field-meta.xml
<CustomField>
    <fullName>Pay_Upfront__c</fullName>
    <label>(Obsolete) Pay Upfront</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pay_Upfront</valueSetName>
    </valueSet>
</CustomField>