force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Qualification_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Issue_Date__c</fullName>
    <label>Qualification Issue Date</label>
    <type>Date</type>
</CustomField>