force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Remaining_Credits_Required__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Credits_Required__c</fullName>
    <formula>IF( Total_Credits_Required__c &lt; Total_Credits_Earned__c , 0, Total_Credits_Required__c - Total_Credits_Earned__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Credits Required</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>