force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Starting_Term__c.field-meta.xml
<CustomField>
    <fullName>Starting_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The first academic term that the student starts the program.</description>
    <label>Starting Term</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Study_Term__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Academic_Term</value>
        </filterItems>
        <infoMessage>Please select an academic term.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Study_Term__c</referenceTo>
    <relationshipLabel>Individual Program Enrollments</relationshipLabel>
    <relationshipName>Individual_Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>