force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Study_Pathway_Mode__c.field-meta.xml
<CustomField>
    <fullName>Study_Pathway_Mode__c</fullName>
    <description>Specify whether to use default program pathway or custom pathway.</description>
    <label>Study Pathway Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>