force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Study_Plan__c.field-meta.xml
<CustomField>
    <fullName>Study_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Plan</label>
    <referenceTo>Study_Plan__c</referenceTo>
    <relationshipLabel>Individual Program Enrollments</relationshipLabel>
    <relationshipName>Individual_Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>