force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Study_Plan_Option_Type__c.field-meta.xml
<CustomField>
    <fullName>Study_Plan_Option_Type__c</fullName>
    <label>Study Plan Option Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Study_Plan_Option_Type</valueSetName>
    </valueSet>
</CustomField>