force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Study_Program_Academic_Level__c.field-meta.xml
<CustomField>
    <fullName>Study_Program_Academic_Level__c</fullName>
    <description>Study program academic level for individual academic profile generation.</description>
    <formula>TEXT(Study_Program__r.Academic_Level__c)</formula>
    <inlineHelpText>Study program academic level for individual academic profile generation.</inlineHelpText>
    <label>Study Program Academic Level</label>
    <type>Text</type>
</CustomField>