force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Total_Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>Total_Credits_Earned__c</fullName>
    <formula>Credits_Earned__c + Additional_Credits_Earned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Credits Earned</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>