force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Units_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Units_Enrolled__c</fullName>
    <label># of Units Enrolled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>