force-app/main/default/objects/Individual_Program_Enrollment__c/fields/Withdrawal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Reason__c</fullName>
    <label>Withdrawal Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remission due to special circumstances</fullName>
            </value>
            <value>
                <fullName>Not a genuine student</fullName>
            </value>
            <value>
                <fullName>Student not entitled/eligible</fullName>
            </value>
            <value>
                <fullName>Student not academically suited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>