force-app/main/default/objects/Individual_Program_Enrollment__c/recordTypes/Child_Enrollment.recordType-meta.xml
<RecordType>
    <fullName>Child_Enrollment</fullName>
    <active>true</active>
    <description>Child program enrollment.</description>
    <label>Child Enrollment</label>
</RecordType>