force-app/main/default/objects/Individual_Program_Enrollment__c/recordTypes/Master_Enrollment.recordType-meta.xml
<RecordType>
    <fullName>Master_Enrollment</fullName>
    <active>true</active>
    <description>Master program enrollment record.</description>
    <label>Master Enrollment</label>
</RecordType>