force-app/main/default/objects/Individual_Program_Enrollment__c/validationRules/Required_Study_Plan.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Study_Plan</fullName>
    <active>true</active>
    <description>To ensure study plan is populated.</description>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(Enrollment_Status__c, &quot;Draft&quot;)),
    ISBLANK(Study_Plan__c)
)</errorConditionFormula>
    <errorDisplayField>Study_Plan__c</errorDisplayField>
    <errorMessage>The study plan is required.</errorMessage>
</ValidationRule>