force-app/main/default/objects/Individual_Program_Enrollment__c/validationRules/Validate_Child_Enrollment_Study_Program.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Child_Enrollment_Study_Program</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;Child_Enrollment&quot;,
NOT(ISBLANK(Study_Program__c)),
NOT(ISBLANK(Master_Enrollment__c)),
Study_Program__c != Master_Enrollment__r.Study_Program__c
)</errorConditionFormula>
    <errorDisplayField>Study_Program__c</errorDisplayField>
    <errorMessage>Study Program must match the Study Program of the Master Enrollment.</errorMessage>
</ValidationRule>