force-app/main/default/objects/Individual_Program_Enrollment__c/validationRules/Validate_Study_Program.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Study_Program</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Study_Plan__c)),
  Study_Plan__r.Study_Program__c != Study_Program__c
)</errorConditionFormula>
    <errorDisplayField>Study_Plan__c</errorDisplayField>
    <errorMessage>The Study Plan must belong to the selected Study Program.</errorMessage>
</ValidationRule>