force-app/main/default/objects/Individual_Program_Enrollment__c/listViews/All_Master_Enrollments.listView-meta.xml
<ListView>
    <fullName>All_Master_Enrollments</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Study_Program__c</columns>
    <columns>Study_Plan__c</columns>
    <columns>Enrollment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Individual_Program_Enrollment__c.Master_Enrollment</value>
    </filters>
    <label>All Master Enrollments</label>
</ListView>